Fri Jul  6 20:16:19 2001  Brian Gough  <bjg@network-theory.co.uk>

	* zeta.c (riemann_zeta1m_slt0): added a function to compute
 	zeta(1-s) without loss of accuracy for s near zero, as used by the
 	reflection formula.  This fixes a bug in the accuracy of results
 	of zeta(-x) for small x, where loss of precision previously
 	occurred by evaluating 1-x.

2001-07-06  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_I0.c (gsl_sf_bessel_I0_scaled_e): added missing scaling
	factor of exp(-x) for case x<2sqrt(epsilon)

Thu Jul  5 16:16:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* erfc.c (gsl_sf_erfc_e): corrected case of -10<x<-5 to take into
 	account that chebyshev fit is defined in terms of positive x.

Tue Jul  3 12:09:33 2001  Brian Gough  <bjg@network-theory.co.uk>

	* eval.h (EVAL_DOUBLE): avoid returning the status value as a
 	numerical result

2001-06-28  Brian Gough  <bjg@network-theory.co.uk>

	* elementary.c (gsl_sf_multiply_e): use GSL_COERCE_DBL macro to
	deal with extended register problem

	* coupling.c: include stdlib.h for prototype of abs()

Wed Jun 27 21:20:22 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.c (test_fermidirac): increased tolerance on test of
 	gsl_sf_fermi_dirac_int(9,500) by factor of two to allow for MSVC

Tue Jun 26 12:10:17 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_sf_gamma.h: added const to prototype, to match function
 	definition

Sun May  6 13:01:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.c: initialize message_buff to null string to prevent
 	random segmentation faults

	* test_sf.h: simplified test macros to reduce stack usage

Mon Apr 30 12:38:15 2001  Brian Gough  <bjg@network-theory.co.uk>

	* airy_zero.c bessel_zero.c: zeros are now counted using an
 	unsigned int

	* poly.c: moved poly_eval function into poly/ directory

Wed Apr 25 17:28:48 2001  Brian Gough  <bjg@network-theory.co.uk>

	* trig.c (gsl_sf_polar_to_rect): dropped _e from polar/rect
 	conversion functions
