@@ -25,6 +25,7 @@
 #include <gsl/gsl_errno.h>
 #include "gsl_sf_elementary.h"
 
+#include "check.h"
 
 int
 gsl_sf_multiply_e(const double x, const double y, gsl_sf_result * result)
@@ -53,7 +54,8 @@ gsl_sf_multiply_e(const double x, const double y, gsl_sf_result * result)
     if(max < 0.9 * GSL_SQRT_DBL_MAX || min < (f * DBL_MAX)/max) {
       result->val = GSL_COERCE_DBL(x*y);
       result->err = 2.0 * GSL_DBL_EPSILON * fabs(result->val);
-      return (result->val == 0.0 ? GSL_EUNDRFLW : GSL_SUCCESS);
+      CHECK_UNDERFLOW(result);
+      return GSL_SUCCESS;
     }
     else {
       result->val = 0.0; /* FIXME: should be Inf */
