@@ -1,3 +1,8 @@
+2001-07-10  Brian Gough  <bjg@hppav.local>
+
+	* check.h (CHECK_UNDERFLOW): provide macro for checking results
+	for underflow
+
 Fri Jul  6 20:16:19 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* zeta.c (riemann_zeta1m_slt0): added a function to compute
